# textimg

./: .dockerignore  .gitignore  .golangci.yml  .travis.yml  BUILD.bazel  Dockerfile  LICENSE  Makefile  README.adoc  README.md  README_ja.md  WORKSPACE  archive.sh  cmd_test.go  color.go  config.go  docker-compose.yml  env.go  envvar.go  flake.nix  go.mod  go.sum  image.go  image_test.go  ioutil.go  main.go  main_ondocker_test.go  main_test.go  parse.go  parse_test.go  root.go  root_common_test.go  root_on_docker_test.go  root_test.go  run.sh  slide.go  slide_test.go  tester.sh  version.go
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto_merge.yml  main.yml  pr-labeler.yml  release.yml  test.yml
color/: color.go
completions/bash/: textimg
completions/fish/: textimg.fish
completions/zsh/: _textimg
config/: config.go  config_test.go  envvar.go  face.go  face_test.go  writer.go  writer_mock.go
escseq/: BUILD.bazel  color.go  parse.go  parse_test.go
image/: encode.go  image.go  util.go
internal/global/: BUILD.bazel  env.go  version.go
ioimage/: BUILD.bazel  draw.go  face.go  face_test.go  image.go  image_test.go  scale.go  scale_test.go
log/: BUILD.bazel  log.go  log_test.go
parser/: color.go  grammar.peg.go  grammer.peg  grammer.peg.go  parse.go  parse_test.go  parser.go  parser_test.go
resize/: resize.go
script/: fetch_color.sh
scripts/: merge_coverage_profile.sh  tester.sh
scripts/emoji/: main.go
scripts/width/: BUILD.bazel  main.go
testdata/in/: 255.txt  red_grad.txt
token/: token.go  token_test.go
tools/: tester.sh
tools/width/: main.go
