load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar", "pkg_deb")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jiro4989/textimg
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "ioutil.go",
        "main.go",
        "root.go",
    ],
    importpath = "github.com/jiro4989/textimg",
    visibility = ["//visibility:private"],
    deps = [
        "//escseq:go_default_library",
        "//internal/global:go_default_library",
        "//ioimage:go_default_library",
        "//log:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/golang.org/x/crypto/ssh/terminal:go_default_library",
        "//vendor/golang.org/x/image/font:go_default_library",
    ],
)

go_binary(
    name = "textimg",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    srcs = [
        "cmd_test.go",
        "main_test.go",
        "root_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//escseq:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)

pkg_tar(
    name = "bin",
    strip_prefix = "/src",
    package_dir = "/usr/bin",
    srcs = ["//:textimg"],
    mode = "0755",
)

pkg_tar(
    name = "tar",
    extension = "tar.gz",
    deps = [
        ":bin",
    ],
)

pkg_deb(
    name = "deb",
    architecture = "amd64",
    built_using = "unzip (6.0.1)",
    data = ":tar",
    depends = [
        "zlib1g-dev",
        "unzip",
    ],
    description_file = "debian/description",
    homepage = "http://bazel.build",
    maintainer = "The Bazel Authors <bazel-dev@googlegroups.com>",
    package = "bazel",
    version = "0.1.1",
)
