load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "color.go",
        "parse.go",
    ],
    importpath = "github.com/jiro4989/textimg/escseq",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/mattn/go-runewidth:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["parse_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
