load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["log.go"],
    importpath = "github.com/jiro4989/textimg/log",
    visibility = ["//visibility:public"],
    deps = ["//internal/global:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["log_test.go"],
    embed = [":go_default_library"],
)
